--- a/Games/Anxys/Anxys.html
+++ b/Games/Anxys/Anxys.html
@@ -120,6 +120,7 @@
     <script src="/Code/JS/Library/Engine/Prototype_4_04.js" type="text/javascript"></script>
     <script src="/Code/JS/Library/Engine/ENGINE_4_11.js" type="text/javascript"></script>
     <script src="/Code/JS/Library/Engine/GRID_3_14.js" type="text/javascript"></script>
+    <script src="/Code/JS/Library/Engine/MINIMAP_1_00.js" type="text/javascript"></script>
     <script src="/Code/JS/Library/Engine/MAZE_4_02.js" type="text/javascript"></script>
     <script src="/Code/JS/Library/Engine/IndexArrayManagers_3_08.js" type="text/javascript"></script>
     <script src="/Code/JS/Library/Engine/AI_2_03.js" type="text/javascript"></script>
